# sim_friendly_rival_automaton_sizes

./: .gitignore  .gitmodules  Action.cpp  Action.hpp  CMakeLists.txt  DFA_translator.hpp  DirectedGraph.cpp  DirectedGraph.hpp  Partition.hpp  README.md  StrategyM3.cpp  StrategyM3.hpp  UnionFind.hpp  build_fugaku.sh  friendly_rival_10k  main.cpp  minimum.cpp  sort_by_size.cpp  test_automaton_size.cpp
analysis/: .gitignore  Pipfile  analyze_simple_automaton_count.py  visualize.py  visualize_serialized_automaton.py
job/: .gitignore  fugaku_job.sh  plot_histogram.py  split_lines.rb
